chore(deps): upgrade umi and antd

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "ahooks": "^3.7.5",
-    "antd": "^5.2.2",
-    "umi": "4.0.64"
+    "antd": "5.4.2",
+    "umi": "4.0.65"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
